--- a/package.json
+++ b/package.json
@@ -11,14 +11,13 @@
   },
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "browser-sync": "^3.0.3",
     "concurrently": "^9.1.0",
+    "sass": "^1.81.0",
     "stylelint": "^16.10.0",
     "stylelint-config-primer": "^11.1.1"
   },
-  "dependencies": {
-    "sass": "^1.80.6"
-  }
+  "keywords": [],
+  "description": ""
 }
